<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".me">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="377dp"
        android:layout_height="322dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dee" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:textStyle="bold"
        android:textSize="33sp"
        android:textAlignment="center"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView13"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/track" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/slack" />
</LinearLayout>